# Meeting-Scheduling-AI-Assistant

./: .gitignore  LICENSE  README.md  SS_Meeting_Scheduling_AI-Agent_Doc.docx  agent.py  app.py  auth_test.py  calendar_test.py  config.py  google_auth.py  google_calendar.py  graph.py  graph_state.py  pyproject.toml  pyrightconfig.json  requirements.txt  tools.py
backend/: __init__.py  main.py
nodes/: cancel.py  change_options.py  confirm.py  extract_intent.py  reschedule.py  schedule.py
