[tool.poetry]
name = "meeting-scheduling-ai-agent"
version = "1.0.0"
description = "AI Agent to schedule, cancel, and edit meetings using natural language prompts"
authors = ["Sai Sankpal <saisankpal16@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

# --- LangChain ecosystem (aligned versions) ---
langchain = "^0.2.0"
langchain-core = "^0.2.0"
langchain-community = "^0.2.0"
langchain-groq = "^0.1.4"
langgraph = "^0.2.0"

# --- Utilities ---
python-dotenv = "^1.0.1"
python-dateutil = "^2.9.0"
streamlit = "^1.31.1"

# --- Google APIs ---
google-api-python-client = "^2.110.0"
google-auth = "^2.23.0"
google-auth-oauthlib = "^1.1.0"
google-auth-httplib2 = "^0.2.0"


pydantic = "^2.12.5"
dateparser = "^1.3.0"
fastapi = "^0.135.1"
uvicorn = "^0.41.0"
requests = "^2.32.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
reportAbstractUsage = false


